--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,15 +9,15 @@
     ".eslintrc.json": true,
     ".gitignore": true,
     ".webpack/": true,
-    "forge.config.ts": true,
+    "forge.config.ts": false,
     "node_modules/": true,
     "package-lock.json": true,
     "postcss.config.js": true,
     "tailwind.config.js": true,
-    "tsconfig.json": true,
-    "webpack.main.config.ts": true,
-    "webpack.plugins.ts": true,
-    "webpack.renderer.config.ts": true,
+    "tsconfig.json": false,
+    "webpack.main.config.ts": false,
+    "webpack.plugins.ts": false,
+    "webpack.renderer.config.ts": false,
     "webpack.rules.ts": true,
     "README.md": true
   },
