--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,17 +9,19 @@
     ".eslintrc.json": true,
     ".gitignore": true,
     ".webpack/": true,
-    "forge.config.ts": false,
+    "forge.config.ts": true,
     "node_modules/": true,
     "package-lock.json": true,
     "postcss.config.js": true,
     "tailwind.config.js": true,
-    "tsconfig.json": false,
-    "webpack.main.config.ts": false,
-    "webpack.plugins.ts": false,
-    "webpack.renderer.config.ts": false,
+    "tsconfig.json": true,
+    "webpack.main.config.ts": true,
+    "webpack.plugins.ts": true,
+    "webpack.renderer.config.ts": true,
     "webpack.rules.ts": true,
     "README.md": true
   },
-  "explorerExclude.backup": {}
+  "explorerExclude.backup": {},
+  "nuxt.isNuxtApp": false,
+  "hide-files.files": []
 }
