--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
     "node_modules/": true,
     "package-lock.json": true,
     "postcss.config.js": true,
-    "tailwind.config.js": true,
+    "tailwind.config.js": false,
     "tsconfig.json": true,
     "webpack.main.config.ts": true,
     "webpack.plugins.ts": true,
