--- a/package.json
+++ b/package.json
@@ -43,13 +43,9 @@
   },
   "dependencies": {
     "@hookstate/core": "^4.0.1",
-    "autoprefixer": "^10.4.16",
     "electron-squirrel-startup": "^1.0.0",
-    "postcss": "^8.4.32",
-    "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "tailwindcss": "^3.3.6"
+    "react-router-dom": "^6.20.1"
   }
 }
